# LightYears

./: .gitignore  CMakeLists.txt  Makefile  README.md
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: entrypoint.h
LightYearsEngine/include/framework/: actor.h  application.h  asset_manager.h  core.h  delegate.h  math_util.h  object.h  physics.h  timer_manager.h  world.h
LightYearsEngine/include/gameplay/: game_stage.h
LightYearsEngine/include/player/: player_spaceship.h
LightYearsEngine/include/spaceship/: spaceship.h
LightYearsEngine/include/vfx/: particle.h
LightYearsEngine/src/: entrypoint.cpp
LightYearsEngine/src/framework/: actor.cpp  application.cpp  asset_manager.cpp  delegate.cpp  math_util.cpp  object.cpp  physics.cpp  timer_manager.cpp  world.cpp
LightYearsEngine/src/gameplay/: game_stage.cpp
LightYearsEngine/src/player/: player_spaceship.cpp
LightYearsEngine/src/spaceship/: spaceship.cpp
LightYearsEngine/src/vfx/: particle.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/enemy/: enemy_spaceship.h  twin_blade.h  vanguard.h  vanguard_stage.h
LightYearsGame/include/game_framework/: game_application.h
LightYearsGame/include/gameplay/: health.h
LightYearsGame/include/level/: game_level_1.h
LightYearsGame/include/player/: player_spaceship.h
LightYearsGame/include/spaceship/: spaceship.h
LightYearsGame/include/vfx/: explosion.h
LightYearsGame/include/weapon/: bullet.h  bullet_shooter.h  shooter.h
LightYearsGame/src/enemy/: enemy_spaceship.cpp  twin_blade.cpp  vanguard.cpp  vanguard_stage.cpp
LightYearsGame/src/game_framework/: game_application.cpp
LightYearsGame/src/gameplay/: health.cpp
LightYearsGame/src/level/: game_level_1.cpp
LightYearsGame/src/player/: player_spaceship.cpp
LightYearsGame/src/spaceship/: spaceship.cpp
LightYearsGame/src/vfx/: explosion.cpp
LightYearsGame/src/weapon/: bullet.cpp  bullet_shooter.cpp  shooter.cpp
